[gd_scene load_steps=10 format=3 uid="uid://coyoddb5ifdwu"]

[ext_resource type="Texture2D" uid="uid://bosyy0cm3s5oo" path="res://assests/textures/mafiosa.png" id="1_7uvj7"]
[ext_resource type="Script" uid="uid://dbpeh1njmx58q" path="res://scripts/mafiosa.gd" id="1_rgbl4"]
[ext_resource type="AudioStream" uid="uid://che54ibqu8q2i" path="res://assests/sfx/malehurt.ogg" id="3_he7s0"]
[ext_resource type="AudioStream" uid="uid://c0fk8fns4dj7g" path="res://assests/sfx/maledeath.wav" id="4_hqgim"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rgbl4"]
radius = 23.0
height = 76.0

[sub_resource type="CircleShape2D" id="CircleShape2D_7uvj7"]
radius = 229.0

[sub_resource type="Animation" id="Animation_rgbl4"]
resource_name = "take_damage"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_he7s0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hqgim"]
_data = {
&"RESET": SubResource("Animation_he7s0"),
&"take_damage": SubResource("Animation_rgbl4")
}

[node name="MafiosaKnife" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 9
script = ExtResource("1_rgbl4")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(3, 3)
texture = ExtResource("1_7uvj7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-3, 8)
shape = SubResource("CapsuleShape2D_rgbl4")

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
visible = false
position = Vector2(-1, 8)
shape = SubResource("CircleShape2D_7uvj7")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_hqgim")
}

[node name="HurtSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_he7s0")

[node name="EnemyDeath" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_hqgim")

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_player_detector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_on_player_detector_body_exited"]
